--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ about_profile_image: images/grad.jpg
 about_content: | # this will include new lines to allow paragraphs
   Dedicated computer science professional specializing in software development, with a strong interest in data analysis. Eager to contribute to a dynamic team where I can further develop my technical skills and learn from experienced peers. Able to collaborate effectively, with strong interpersonal skills and proficiency in various programming languages. Passionate about leveraging data insights to guide informed business decisions.
 
-  I am most skilled in: <mark>Python Developer</mark> and <mark>Data Analysis</mark>
+  I am most skilled in: <mark>Python</mark> and <mark>Data Analysis</mark>
 
 content:
   - title: Education # Title for the section
@@ -66,9 +66,8 @@ content:
           #   During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
           #   I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
-      content:
-        - layout: middle
-          title: Sookmyung Women's University
+    
+        - title: Sookmyung Women's University
           caption: Feb 2020
           sub_title: Bachelor of Engineering in Computer Science
           # quote: >
