--- a/_config.yml
+++ b/_config.yml
@@ -67,9 +67,9 @@ content:
 
           #   I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
     
-        - title: Sookmyung Women's University
-          caption: Feb 2020
-          sub_title: Bachelor of Engineering in Computer Science
+        # - title: Sookmyung Women's University
+        #   caption: Feb 2020
+        #   sub_title: Bachelor of Engineering in Computer Science
           # quote: >
           #   Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
           # description: | # this will include new lines to allow paragraphs
