--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ darkmode: false
 
 # Social links
 # twitter_username: facespics
-github_username:  Angela118
+github_username:  Angela119
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jameswgrant
-linkedin_username: angela-yoon-94
+linkedin_username: angela-yoon94
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: globalmtb
@@ -53,30 +53,6 @@ about_content: | # this will include new lines to allow paragraphs
   I am most skilled in: <mark>Python</mark> and <mark>Data Analysis</mark>
 
 content:
-  - title: Education # Title for the section
-      layout: list # Type of content section (list/text)
-      content:
-        - layout: middle
-          title: University of California, Davis
-          caption: Jun 2023
-          sub_title: Master of Science in Computer Science
-          # quote: >
-          #   Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-          # description: | # this will include new lines to allow paragraphs
-          #   During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          #   I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
-    
-        # - title: Sookmyung Women's University
-        #   caption: Feb 2020
-        #   sub_title: Bachelor of Engineering in Computer Science
-          # quote: >
-          #   Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-          # description: | # this will include new lines to allow paragraphs
-          #   During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          #   I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.      
-  
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
@@ -96,7 +72,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
-  - title: Certificate # Title for the section
+  - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
@@ -110,6 +86,19 @@ content:
         description: | # this will include new lines to allow paragraphs
             Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
 
+  - title: Education # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: University of California, Davis
+        caption: Jun 2023
+        sub_title: Master of Science in Computer Science
+        quote: >
+          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+        description: | # this will include new lines to allow paragraphs
+          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+
+          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
 
   - title: Skills
     layout: text
@@ -117,9 +106,8 @@ content:
       - Programming skills: Python,  Java, C, C++, JavaScript, SQL, MongoDB, Arduino
       - Data Analysis using Python with Pandas, Scikit-learn, Numpy, Seaborn, and Matplotlib.
 
-
 # Footer
-# footer_show_references: true
+footer_show_references: false # true
 # references_title: References on request (Override references text)
 
 # Build settings
