--- a/_config.yml
+++ b/_config.yml
@@ -72,13 +72,20 @@ content:
         caption: Feb 2020
         sub_title: Bachelor of Engineering in Computer Science
 
+  - title: Skills
+    layout: text
+    content: | # this will include new lines to allow paragraphs
+      - Programming skills: Python,  Java, C, C++, JavaScript, SQL, MongoDB, Arduino
+      - Data Analysis using Python with Pandas, Scikit-learn, Numpy, Seaborn, and Matplotlib.
+
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
+      - layout: left
+        title: Research about Gamification in AI Education
+        # link: github.com/sproogen
         # link_text: Project Website
+        caption: Mar 2023 - Sep 2023
         additional_links:
           - title:  sproogen/modern-resume-theme
             icon: fab fa-github
@@ -87,23 +94,73 @@ content:
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+          This project aims to create an innovative gamification framework that leverages machine learning to promote equity and inclusion in the education field.
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+          - Collected and cleaned data related to games for AI education and built a data set.
+          - Visualized and analyzed the collected data by using <mark>Python</mark> with <mark>Pandas</mark>, <mark>Numpy</mark>, <mark>Seaborn</mark>, and <mark>Matplotlib</mark>.
+      
+      - layout: left
+        title: “Play Meet”
+        link: github.com/Angela118/playmeet
+        # link_text: Project Website
+        caption: May 2018 - Sep 2018
+        additional_links:
+          - title:  sproogen/modern-resume-theme
+            icon: fab fa-github
+            url: github.com/sproogen/modern-resume-theme
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        quote: >
+          “Play Meet” is an unreleased web application that helps amateur soccer teams find the most ideal opponent team. This application includes several functions such as messenger, scheduling with a calendar, reviewing the opposing team, and recommendation systems.
+        description: | # this will include new lines to allow paragraphs
+          - Managed the project and team as a team leader.
+          - Made the recommendation system with Euclidean distance based on the users’ information data using <mark>Python</mark>.
+          - Created the server using <mark>JavaScript</mark> in <mark>Node.JS</mark>.
+          - Built the Database which can collect the users’ information and schedule with <mark>MongoDB</mark>.
+          - Designed the overall UI/UX.
 
-  - title: Experience # Title for the section
+      - layout: left
+        title: WIC Maker Hackathon:“IoT Smart Stroller”
+        # link: github.com/Angela118/playmeet
+        # link_text: Project Website
+        caption: Jan 2018
+        additional_links:
+          - title:  sproogen/modern-resume-theme
+            icon: fab fa-github
+            url: github.com/sproogen/modern-resume-theme
+          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
+          #   icon: fab fa-github
+          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+        quote: >
+          “IoT Smart Stroller” which can read the surroundings and react optimally for parents.
+        description: | # this will include new lines to allow paragraphs
+          - Managed the project and team as a team leader.
+          - Coded the sensors (the distance, bump, temperature and humidity, and sound sensors) and speaker attached to the stroller with <mark>Arduino</mark>.
+          - Developed a mobile application and connected it to the Arduino system using <mark>App Inventor</mark>.
+
+  - title: Certificate # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: Data Science Immersive Program (1-month intensive course)
+        # link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        sub_title: BOOSTCOURSE Data Science Projects Coaching Study
+        caption: Jan 2024 - Feb 2024
+        # quote: >
+        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+            Analyzed multiple datasets on Kaggle, performing Exploratory Data Analysis (EDA), Feature Engineering, and Model Selection and Parameter Optimization using Python libraries including Pandas, Scikit-learn, NumPy, Seaborn, and Matplotlib.
+
+  - title: Honor & Scholarships
+    layout: text
+    content: | # this will include new lines to allow paragraphs
+      - 3rd place, WIC Maker Hackathon	| Sookmyung Women’s University				      
+    quote: > 
+      Winter 2018
+      - Honor Student Scholarship | Sookmyung Women’s University			           Spring 2017, Spring 2018
+      - Prime Scholarship | Sookmyung Women’s University						      Winter 2016
 
   # - title: Education # Title for the section
   #   layout: list # Type of content section (list/text)
@@ -119,11 +176,11 @@ content:
 
   #         I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
 
-  - title: Skills
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      - Programming skills: Python,  Java, C, C++, JavaScript, SQL, MongoDB, Arduino
-      - Data Analysis using Python with Pandas, Scikit-learn, Numpy, Seaborn, and Matplotlib.
+  # - title: Skills
+  #   layout: text
+  #   content: | # this will include new lines to allow paragraphs
+  #     - Programming skills: Python,  Java, C, C++, JavaScript, SQL, MongoDB, Arduino
+  #     - Data Analysis using Python with Pandas, Scikit-learn, Numpy, Seaborn, and Matplotlib.
 
 # Footer
 footer_show_references: true
