--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,7 @@ content:
     content:
       - layout: top
         title: Research about Gamification in AI Education
+        sub_title: Advised by Prof.Setareh Rafatirad
         # link: github.com/sproogen
         # link_text: Project Website
         caption: Mar 2023 - Sep 2023
