--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ linkedin_username: angela-yoon94
 # about_title: About Me
 about_profile_image: images/grad.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Dedicated computer science professional specializing in software development, with a strong interest in data analysis. Eager to contribute to a dynamic team where I can further develop my technical skills and learn from experienced peers. Able to collaborate effectively, with strong interpersonal skills and proficiency in various programming languages. Passionate about leveraging data insights to guide informed business decisions.
+  Dedicated computer science professional specializing in software development, with a strong interest in data analysis. Eager to contribute to a dynamic team where I can further develop my technical skills and learn from experienced peers.
 
   I am most skilled in: <mark>Python</mark> and <mark>Data Analysis</mark>
 
