modify tiny thing

--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,7 @@ and reviews.
           - <mark>Python</mark>, <mark>JavaScript</mark>, <mark>Node.js</mark>, <mark>MongoDB</mark>
 
       - layout: top
-        title: "WIC Maker Hackathon: IoT Smart Stroller"
+        title: 'WIC Maker Hackathon: IoT Smart Stroller'
         # link: github.com/Angela118/playmeet
         # link_text: Project Website
         caption: Jan 2018
