--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ content:
   - title: Skills
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - Programming Skill: **Python**, C/C++, Java, JavaScript, SQL | MongoDB, Node.js, Arduino, App Inventor
+      - Programming Skill: Python, C/C++, Java, JavaScript, SQL | MongoDB, Node.js, Arduino, App Inventor
       - Data Analysis Tool: Pandas, Scikit-learn, Numpy, Seaborn, Matplotlib
 
   - title: Projects # Title for the section
@@ -99,10 +99,8 @@ content:
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         # quote: >
         description: | # this will include new lines to allow paragraphs
-          - Collected and cleaned data performing in-depth analysis of 35 commercially available and playable educational
-games designed for teaching AI across 18 criteria and built a comprehensive data set.
-          - Conducted exploratory research using Python libraries to visualize and analyze the data distributions and
-correlations.
+          - Collected and cleaned data performing in-depth analysis of 35 commercially available and playable educational games designed for teaching AI across 18 criteria and built a comprehensive data set.
+          - Conducted exploratory research using Python libraries to visualize and analyze the data distributions and correlations.
           - Python <mark>Pandas</mark>, <mark>Numpy</mark>, <mark>Seaborn</mark>, <mark>Matplotlib</mark>
       
       - layout: top
@@ -123,8 +121,7 @@ correlations.
           - As the team leader of a three-member team, managed and optimized the entire project workflow, ensuring operational efficiency and culminating in a successful final presentation.
           - Developed the recommendation system using <mark>Numpy</mark> and <mark>SciPy</mark>, leveraging Euclidean distance to analyze user information data for personalized recommendations.
           - Built the database to store and manage user information, chat logs, reviews, and schedules.
-          - Engineered the server to handle the data for the match management system, posting games, chatting, scheduling,
-and reviews.
+          - Engineered the server to handle the data for the match management system, posting games, chatting, scheduling, and reviews.
           - <mark>Python</mark>, <mark>JavaScript</mark>, <mark>Node.js</mark>, <mark>MongoDB</mark>
 
       - layout: top
