--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ linkedin_username: angela-yoon94
 # about_title: About Me
 about_profile_image: images/grad.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Dedicated computer science professional specializing in software development, with a strong interest in data analysis. Eager to contribute to a dynamic team where I can further develop my technical skills and learn from experienced peers.
+  Dedicated computer science professional specializing in software development, with a strong interest in data analysis. Able to collaborate effectively, with strong interpersonal skills and proficiency in various programming languages.
 
   I am most skilled in: <mark>Python</mark> and <mark>Data Analysis</mark>
 
@@ -78,7 +78,7 @@ content:
   - title: Skills
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - Programming skills: Python,  Java, C, C++, JavaScript, SQL, MongoDB, Arduino
+      - Python, C/C++, Java, JavaScript, SQL | MongoDB, Node.js, Arduino, App Inventor
       - Data Analysis Tool: Pandas, Scikit-learn, Numpy, Seaborn, Matplotlib
 
   - title: Projects # Title for the section
