--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ content:
   - title: Skills
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - Python, C/C++, Java, JavaScript, SQL, MongoDB, Node.js, Arduino, App Inventor
+      - Programming Languages and Tools: Python, C/C++, Java, JavaScript, SQL, MongoDB, Node.js, Arduino, App Inventor
       - Data Analysis Tool: Pandas, Scikit-learn, Numpy, Seaborn, Matplotlib
 
   - title: Projects # Title for the section
