added AI boostcourse

--- a/_config.yml
+++ b/_config.yml
@@ -147,15 +147,26 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top
-        title: Data Science Immersive Program (1-month intensive course)
+        title: Data Science Immersive Program
         # link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: BOOSTCOURSE Data Science Projects Coaching Study
+        sub_title: BOOSTCOURSE <Data Science Projects 2024> Coaching Study
         caption: Jan 2024 - Feb 2024
         # quote: >
         #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             Analyzed multiple datasets on Kaggle, performing Exploratory Data Analysis (EDA), Feature Engineering, Model Selection, and Parameter Optimization using Python-based techniques.
+      
+      - layout: top
+        title: AI Immersive Program
+        # link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: BOOSTCOURSE Coaching Study <Let's AI>
+        caption: May 2024 - Present
+        # quote: >
+        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        # description: | # this will include new lines to allow paragraphs
+        #     Analyzed multiple datasets on Kaggle, performing Exploratory Data Analysis (EDA), Feature Engineering, Model Selection, and Parameter Optimization using Python-based techniques.
 
   - title: Honor & Scholarships
     layout: text
