--- a/_config.yml
+++ b/_config.yml
@@ -143,14 +143,14 @@ content:
           - Developed a simple mobile application to display data from the sensors for users by connecting it to the Arduino system.
           - <mark>App Inventor</mark>, <mark>Arduino</mark>
 
-  - title: Certificate # Title for the section
+  - title: Activities # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top
         title: Data Science Immersive Program
         # link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: BOOSTCOURSE <Data Science Projects 2024> Coaching Study
+        sub_title: BOOSTCOURSE '<Data Science Projects 2024>' Coaching Study
         caption: Jan 2024 - Feb 2024
         # quote: >
         #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
@@ -161,7 +161,7 @@ content:
         title: AI Immersive Program
         # link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: BOOSTCOURSE Coaching Study <Let's AI>
+        sub_title: BOOSTCOURSE Coaching Study '<Let's AI>'
         caption: May 2024 - Present
         # quote: >
         #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
