--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ content:
         title: Data Science Immersive Program
         # link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: BOOSTCOURSE '<Data Science Projects 2024>' Coaching Study
+        sub_title: BOOSTCOURSE \<Data Science Projects 2024\> Coaching Study
         caption: Jan 2024 - Feb 2024
         # quote: >
         #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
@@ -161,7 +161,7 @@ content:
         title: AI Immersive Program
         # link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: BOOSTCOURSE Coaching Study '<Let's AI>'
+        sub_title: BOOSTCOURSE Coaching Study \<Let's AI\>
         caption: May 2024 - Present
         # quote: >
         #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
